--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <title>ItVLabsTest</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+  <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-root></app-root>  
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="node_modules/popper.js/dist/umd/popper.js"></script>
+	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
 </body>
 </html>
